// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItems should return all entry-items 1`] = `
[
  {
    "details": [],
    "id": 0,
    "message": "foo-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all entry-items 2`] = `
[
  {
    "details": [],
    "id": 2,
    "message": "bar-message",
    "related": [
      {
        "id": "bar-foo-module",
        "type": "module",
      },
      {
        "id": "bar-bar-module",
        "type": "module",
      },
      {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return all items 1`] = `
[
  {
    "details": [],
    "id": 0,
    "message": "foo-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all items 2`] = `
[
  {
    "details": [],
    "id": 2,
    "message": "bar-message",
    "related": [
      {
        "id": "bar-foo-module",
        "type": "module",
      },
      {
        "id": "bar-bar-module",
        "type": "module",
      },
      {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return all module-items 1`] = `
[
  {
    "details": [],
    "id": 0,
    "message": "foo-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return all module-items 2`] = `
[
  {
    "details": [],
    "id": 2,
    "message": "bar-message",
    "related": [
      {
        "id": "bar-foo-module",
        "type": "module",
      },
      {
        "id": "bar-bar-module",
        "type": "module",
      },
      {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return entry-item with specific id 1`] = `
[
  {
    "details": [],
    "id": 0,
    "message": "foo-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return entry-item with specific id 2`] = `
[
  {
    "details": [],
    "id": 2,
    "message": "bar-message",
    "related": [
      {
        "id": "bar-foo-module",
        "type": "module",
      },
      {
        "id": "bar-bar-module",
        "type": "module",
      },
      {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;

exports[`getItems should return module-item with specific id 1`] = `
[
  {
    "details": [],
    "id": 0,
    "message": "foo-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return module-item with specific id 2`] = `
[
  {
    "details": [],
    "id": 1,
    "message": "bar-message",
    "related": [
      {
        "id": "foo-foo-module",
        "type": "module",
      },
      {
        "id": "foo-bar-module",
        "type": "module",
      },
      {
        "id": "foo-foo-entry",
        "type": "entry",
      },
      {
        "id": "foo-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "warn",
  },
]
`;

exports[`getItems should return module-item with specific id 3`] = `
[
  {
    "details": [],
    "id": 2,
    "message": "bar-message",
    "related": [
      {
        "id": "bar-foo-module",
        "type": "module",
      },
      {
        "id": "bar-bar-module",
        "type": "module",
      },
      {
        "id": "bar-foo-entry",
        "type": "entry",
      },
      {
        "id": "bar-bar-entry",
        "type": "entry",
      },
    ],
    "rule": "foo-rule",
    "type": "error",
  },
]
`;
